--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
     <a
     href="./assets/images/predeal-sarari-2_SftMdnzW.mp4" class="button-link">IMAGINI EXTERIOR SI INTERIOR </a>
   </br>
+  <div>
+      
+    <a
+      href="harta.html" class="button-link">HARTA LOCUINTA COCHETA IN COMUNA PREDEAL SARARI JUDETUL PRAHOVA</a>
+  </br>  
+    
+        </div>
   <footer>
     <p>Contact : 0769734755</p>
   </footer>
